top and dream part added

--- a/index.html
+++ b/index.html
@@ -6,10 +6,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tazneen Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <section class="top-part">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="name-color">Tazneen Munni</span> World</h1>
+            <h3>World Class Professional Web Developer</h3>
+            <p>I love web developing.It is very interesing.I am developing myself day-by-day.I try my best to affort
+                this.I can
+                design and develop also.I am a react developer.I can use react for frontend developing and node js for
+                backand.I
+                have a dream a job at a multinational company.</p>
+            <a class="link-button" target="_blank" href="https://www.instagram.com/tazneenakter/">Hire me</a>
+        </div>
+        <div class="half-width">
+            <img src="images/my-bg.png" alt="">
+        </div>
+    </section>
+
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/my-bg2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Big Dream</h1>
+            <h3>Become a web developer</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
+                to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="link-button" target="_blank" href="https://www.instagram.com/tazneenakter/">Download resume</a>
+        </div>
+    </section>
 
 </body>
 
