--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-part">
+    <section class="top-part flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="name-color">Tazneen Munni</span> World</h1>
@@ -30,7 +30,7 @@
         </div>
     </section>
 
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="images/my-bg2.png" alt="">
         </div>
@@ -42,6 +42,31 @@
             <a class="link-button" target="_blank" href="https://www.instagram.com/tazneenakter/">Download resume</a>
         </div>
     </section>
+
+    <section class="experience-part">
+        |<h1>Experiences</h1>
+        <div class="flexible-container">
+            <div id="full-stack" class="experience-item">
+                <h2>Full Stack Web Dev</h2>
+                <h3 class="name-color">2022 - Present | Pro level Web Dev</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue
+                    JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div id="baby-dev" class="experience-item">
+                <h2>Baby Web Developer</h2>
+                <h3 class="name-color">2022-2024 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed
+                    it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p>© Tazneen 2022, all rights reserved.</p>
+    </footer>
 
 </body>
 
